--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -12,15 +12,17 @@ header {
     justify-content: center;
     background-color: transparent;
     position: fixed;
+   
+  
 }
 
 .container {
-    width: 90%;
+    width: 100%;
     padding: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-
+   
 }
 
 
@@ -77,11 +79,8 @@ header {
 
 .menu {
     display: none;
+    color: white;
 }
-
-/* @media screen and (min-width:576px  max-width:992px;) {
-   .container 
- } */
 
 
 #sectionOne {
@@ -169,7 +168,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-  
+
 
 }
 
@@ -245,24 +244,25 @@ header {
 
 }
 
-#sectionFour{
+#sectionFour {
     width: 100%;
     height: 700px;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: white;
 }
 
-.containerFour{
+.containerFour {
     width: 90%;
     padding: 10px;
     display: flex;
     align-items: center;
-    justify-content: space-between;  
+    justify-content: space-between;
 }
 
 
-.textThree{
+.textThree {
     width: 40%;
     padding: 10px;
     display: flex;
@@ -270,30 +270,31 @@ header {
     justify-content: center;
     flex-direction: column;
     gap: 18px;
-    color:black;
+    color: black;
 }
-.textThree span{
+
+.textThree span {
     font-size: 18px;
     font-weight: 600;
     line-height: 24px;
     color: #65C9BB;
 }
 
-.textThree h2{
+.textThree h2 {
     font-size: 40px;
     font-weight: 520;
     line-height: 48px;
     color: rgb(38, 59, 92);
 }
 
-.textThree p{
+.textThree p {
     font-size: 18px;
     font-weight: 300;
     line-height: 27px;
     color: #878585;
 }
 
-.textThree button{
+.textThree button {
     width: 40%;
     padding: 15px 10px;
     font-size: 18px;
@@ -303,22 +304,23 @@ header {
     background-color: #F15B43;
     border: none;
 }
-.textThree button:hover{
+
+.textThree button:hover {
     background-color: transparent;
     border: 2px solid #F15B43;
     color: #F15B43;
     transition: .5s;
 }
 
-.imgTwo{
-width: 55%;
+.imgTwo {
+    width: 55%;
 }
 
-.imgTwo img{
+.imgTwo img {
     width: 100%;
 }
 
-#sectionFive{
+#sectionFive {
     width: 100%;
     height: 700px;
     display: flex;
@@ -327,83 +329,96 @@ width: 55%;
 
 }
 
-.containerFive{
+.containerFive {
     width: 100%;
     padding: 10px;
     display: flex;
     align-items: center;
-    justify-content: space-between;  
+    justify-content: space-between;
 
 
 }
 
-.div{
+.div {
     width: 32%;
     gap: 15px;
     /* padding: 10px; */
     display: flex;
     align-items: center;
-    justify-content: space-between; 
-    flex-direction: column; 
+    justify-content: space-between;
+    flex-direction: column;
     background-color: #F4F2F1;
 }
-.div h3{
+
+.div h3 {
     font-size: 22px;
     font-weight: 600;
     line-height: 48px;
-    color: rgb(38, 59, 92); 
-}
-.div h3:hover{
-   color: #F15B43;
-   cursor: pointer;
+    color: rgb(38, 59, 92);
 }
 
-.div p{
+.div h3:hover {
+    color: #F15B43;
+    cursor: pointer;
+}
+
+.div p {
     font-size: 18px;
     font-weight: 300;
     line-height: 27px;
     color: #878585;
 }
 
-div .rq{
+div .rq {
     font-size: 18px;
     font-weight: 600;
     line-height: 24px;
     color: #65C9BB;
 }
+
 .div .gb {
     font-size: 18px;
     font-weight: 600;
     line-height: 24px;
     color: #878585;
-} 
-.div img{
-    width:90%;   
 }
 
-.cont{
-    width:80%;  
+.div img {
+    width: 90%;
+}
+
+.cont {
+    width: 80%;
     display: flex;
     align-items: center;
-    justify-content: center; 
+    justify-content: center;
     gap: 25px;
 
 }
-.number{
 
+.number {
+    width: 70%;
+    margin-bottom: 15px;
     display: flex;
     align-items: center;
-    justify-content: space-between; 
-    flex-direction: column;    
+    justify-content: space-between;
+    flex-direction: column;
 }
-.dont{
-    width:30%; 
+
+.dont {
+    width: 30%;
     display: flex;
     align-items: center;
-    justify-content: space-between;  
+    justify-content: space-between;
 }
-.dont button{
-    width:100%; 
+
+.dont .btt {
+    width: 100%;
+    padding: 13px 15px;
+}
+
+.dont button {
+    width: 100%;
     padding: 6px 5px;
     font-size: 18px;
     font-weight: 600;
@@ -411,17 +426,20 @@ div .rq{
     color: white;
     background-color: #F15B43;
     border: none;
-    
+
 }
-.dont button:hover{
+
+.dont button:hover {
     background-color: transparent;
     border: 2px solid #F15B43;
     color: #F15B43;
     transition: .5s;
 }
+
+
 #sectionSix {
     width: 100%;
-    height: 500px;
+    min-height: 300px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -432,29 +450,30 @@ div .rq{
     display: flex;
     align-items: center;
     justify-content: space-between;
-  
+
+
 
 }
 
 .imgSix {
-    width: 30%; height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
+    width: 50%;
+    min-height: 250px;
+
 }
 
 .img img {
     width: 100%;
-   
+    height: 450px;
+
 }
 
 .textSix {
-    width: 50%;
+    width: 40%;
     display: flex;
     align-items: flex-start;
     justify-content: center;
     flex-direction: column;
-    gap: 20px;
+
 }
 
 .textSix span {
@@ -464,7 +483,7 @@ div .rq{
     color: #65C9BB;
 }
 
-.textSix  h2 {
+.textSix h2 {
     font-size: 40px;
     font-weight: 520;
     line-height: 48px;
@@ -478,15 +497,16 @@ div .rq{
     color: #878585;
 }
 
-.btnSix{
+.btnSix {
     width: 90%;
+    padding: 18px 12px;
 }
 
 
 
 .btnSix button {
-    width: 40%;
-    padding: 15px 10px;
+    width: 70%;
+    padding: 17px 11px;
     font-size: 18px;
     font-weight: 600;
     line-height: 27px;
@@ -495,7 +515,7 @@ div .rq{
     border: none;
 }
 
-.btOne:hover {
+.btSix:hover {
     background-color: transparent;
     border: 2px solid #F15B43;
     color: #F15B43;
@@ -504,22 +524,710 @@ div .rq{
 
 
 
-#sectionSeven{
+#sectionSeven {
     width: 100%;
-    height: 700px;
+    min-height: 600px;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #EE5C44;
-
+    margin-top: 28px;
+    background-image: url('https://preview.colorlib.com/theme/charitee/assets/img/gallery/section-bg1.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
-.containerSeven{
+.containerSeven {
     width: 100%;
     padding: 10px;
     display: flex;
     align-items: center;
-    justify-content: space-between;  
+    justify-content: space-between;
+    flex-direction: column;
+    gap: 20px;
+    margin: auto;
+}
 
+
+.textSeven {
+    width: 80%;
+    padding: 15px;
+    text-align: center;
+}
+
+
+.textSeven h4 {
+    text-align: center;
+    color: white;
+    margin-bottom: 15px;
+    font-size: 20px;
+}
+
+
+
+.textSeven h1 {
+    text-align: center;
+    color: white;
+    margin-bottom: 15px;
+    font-size: 27px;
+}
+
+.card {
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.cardBox {
+    width: 26%;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+
+
+.card h5 {
+    text-align: center;
+    color: white;
+    margin-bottom: 15px;
+    font-size: 26px;
+}
+
+.card p {
+    text-align: center;
+    color: white;
+    margin-bottom: 15px;
+    font-size: 20px;
+}
+
+
+@media screen and (min-width:576px)and (max-width:991px) {
+    header{
+        width: 100%;
+    }
+    .container{
+        width: 90%;
+    }
+     .container nav{
+        display: none;   
+    }
+     .container .btn{
+        display: none;
+     } 
+    .menu{
+        display: block;    
+        font-size: 30px;    
+    }
+   
+#sectionOne{
+    width: 100%;
+    min-height: 30vh;
+}
+.containerTwo{
+    padding: 40px 0;
+        width: 90%;
+}
+.text h1{
+    font-size:40px ;
+}
+
+.text p{
+    font-size:22px ;
+}
+.text button {
+    width: 45%;
+}
+
+#sectionThree { 
+    flex-direction: column;
+    height: 750px;
+
+}.containerThree{
+    width: 90%;
+    flex-direction: column;
+}
+.img{
+    width: 100%;
+    flex-direction: column;
+}
+.textTwo{
+    width: 90%;
+    flex-direction: column;
+}
+.btnTwo{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.btnTwo .btOne{
+    width: 48%;
+}
+.btnTwo .btTwo{
+    width: 48%;
+}
+
+#sectionFour{
+    flex-direction: column;
+  height: 700px;
+   
+}
+.containerFour{
+  
+        flex-direction: column;
+    }
+    
+.textThree{
+    width: 100%;
+     padding: 10px 0;
+    flex-direction: column;
+}
+.imgTwo{
+    width: 90%;
+   height: 320px;
+    flex-direction: column;
+  
+}
+.imgTwo img{
+    height: 250px;
+}
+
+
+.textThree button{
+    width: 35%;
+}
+#sectionFive{
+    height: 700px;
+   
+}
+.containerFive{
+    width: 100%;
+    flex-wrap: wrap;
+  
+}
+.div{
+    width: 31%;
+    height: 650px;
+    flex-direction: column;
+    margin:  5px;
+  
 
 }
+.div img{
+    width: 100%;
+}
+.div h2{
+    font-size: 17px;
+  
+}
+.cont{
+    width: 40%;
+    flex-direction: column;
+    
+}
+.number{
+    width: 40%;
+    flex-direction: column;
+}
+.dont{
+    flex-direction: column;
+    width: 100%;
+}
+.btt{
+    width: 100%;  
+    font-size: 15px; 
+    background-color: #65C9BB;
+}
+
+#sectionSix{
+    flex-direction: column;
+    height: 750px;
+}
+.containerSix{
+    width: 100%;
+    padding: 40px 0;
+    flex-direction: column;
+  
+}
+.imgSix {
+    width: 90%;
+    height: 300px;
+    padding: 40px 0;
+    display: flex;
+    align-items: space-between;
+    justify-content: center;
+}
+
+.imgSix img{
+    width: 90%;
+    height: 310px;
+}
+.textSix{
+  text-align: justify;
+    width: 80%;
+    height: 350px;  
+    margin-top: 10px;
+} 
+.textSix span{
+    font-size: 19px;
+}
+.textSix h2{
+    font-size: 24px;
+}
+.textSix p{
+    font-size: 19px;
+}
+.btnSix{
+    width: 100%;
+}
+
+.btnSix .btOne{
+    width: 50%; 
+}
+
+#sectionSeven{
+    height: 850px;
+    flex-direction: column;
+}
+.containerSeven{
+    flex-direction: column;
+}
+.textSeven{
+    flex-direction: column;
+}
+.card{
+    flex-direction: column;
+}
+.cardBox{
+    width: 100%;
+    flex-direction: column;
+}
+
+}
+
+
+@media screen and (min-width:300px)and (max-width:576px) {
+    header{
+        width: 100%;
+    }
+    .container{
+        width: 90%;
+    }
+     .container nav{
+        display: none;   
+    }
+     .container .btn{
+        display: none;
+     } 
+
+    .menu{
+        display: block;    
+        font-size: 15px;    
+    }
+   
+#sectionOne{
+    width: 100%;
+    min-height: 30vh;
+}
+.containerTwo{
+    padding: 40px 0;
+        width: 90%;
+}
+.text h1{
+    font-size:30px ;
+}
+
+.text p{
+    font-size:18px ;
+}
+.text button {
+    width: 75%;
+   padding: 15px;
+}
+
+#sectionThree { 
+    flex-direction: column;
+    height: 950px;
+
+}.containerThree{
+    width: 90%;
+    flex-direction: column;
+}
+.img{
+    width: 90%;
+    height: 300px;
+    flex-direction: column;
+}
+.textTwo{
+    width: 90%;
+    flex-direction: column;
+}
+
+.textTwo h2{
+font-size: 20px;
+}
+.btnTwo{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    
+}
+.btnTwo .btOne{
+    width: 100%;
+}
+.btnTwo .btTwo{
+    width: 100%;
+    margin-top: 5px;
+}
+
+#sectionFour{
+    flex-direction: column;
+  height: 800px;
+   
+}
+.containerFour{
+  
+        flex-direction: column;
+    }
+    
+.textThree{
+    width: 100%;
+     padding: 10px 0;
+    flex-direction: column;
+   
+}
+.imgTwo{
+    width: 90%;
+   height: 200px;
+    flex-direction: column;
+  
+}
+.imgTwo img{
+    height: 150px;
+}
+
+
+.textThree button{
+    width: 65%;
+}
+#sectionFive{
+    height: 1900px;
+   
+}
+.containerFive{
+    width: 100%;
+    flex-wrap: wrap;
+  
+}
+.div{
+    width: 100%;
+    height: 610px;
+    flex-direction: column;
+    margin:  5px;
+  
+
+}
+.div img{
+    width: 100%;
+}
+.div h2{
+    font-size: 17px;
+  
+}
+.cont{
+    width: 40%;
+    flex-direction: column;
+    
+}
+.number{
+    width: 40%;
+    flex-direction: column;
+}
+.dont{
+    flex-direction: column;
+    width: 100%;
+}
+.btt{
+    width: 100%;  
+    font-size: 15px; 
+    background-color: #65C9BB;
+}
+
+#sectionSix{
+    flex-direction: column;
+    height: 850px;
+}
+.containerSix{
+    width: 100%;
+    padding: 40px 0;
+    flex-direction: column;
+  
+}
+.imgSix {
+    width: 90%;
+    height: 500px;
+    padding: 40px 0;
+    display: flex;
+    align-items: space-between;
+    justify-content: center;
+}
+
+.imgSix img{
+    width: 90%;
+    height: 360px;
+}
+.textSix{
+  text-align: justify;
+    width: 80%;
+    height: 450px;  
+ 
+} 
+.textSix span{
+    font-size: 19px;
+}
+.textSix h2{
+    font-size: 24px;
+}
+.textSix p{
+    font-size: 19px;
+}
+.btnSix{
+    width: 100%;
+}
+
+.btnSix .btOne{
+    width: 70%; 
+}
+
+#sectionSeven{
+    height: 1050px;
+    flex-direction: column;
+}
+.containerSeven{
+    flex-direction: column;
+}
+.textSeven{
+    flex-direction: column;
+}
+.card{
+    flex-direction: column;
+}
+.cardBox{
+    width: 100%;
+    flex-direction: column;
+}
+
+}
+
+
+@media screen and (min-width:991px)and (max-width:1200px) {
+    header{
+        width: 100%;
+    }
+    .container{
+        width: 90%;
+    }
+     .container nav{
+        display: none;   
+    }
+     .container .btn{
+        display: none;
+     } 
+    .menu{
+        display: block;    
+        font-size: 30px;    
+    }
+   
+#sectionOne{
+    width: 100%;
+    min-height: 30vh;
+}
+.containerTwo{
+    padding: 40px 0;
+        width: 90%;
+}
+.text h1{
+    font-size:40px ;
+}
+
+.text p{
+    font-size:22px ;
+}
+.text button {
+    width: 45%;
+}
+
+#sectionThree { 
+    flex-direction: column;
+    height: 750px;
+
+}.containerThree{
+    width: 90%;
+    flex-direction: column;
+}
+.img{
+    width: 100%;
+    flex-direction: column;
+}
+.textTwo{
+    width: 90%;
+    flex-direction: column;
+}
+.btnTwo{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.btnTwo .btOne{
+    width: 48%;
+}
+.btnTwo .btTwo{
+    width: 48%;
+}
+
+#sectionFour{
+    flex-direction: column;
+  height: 700px;
+   
+}
+.containerFour{
+  
+        flex-direction: column;
+    }
+    
+.textThree{
+    width: 100%;
+     padding: 10px 0;
+    flex-direction: column;
+}
+.imgTwo{
+    width: 90%;
+   height: 320px;
+    flex-direction: column;
+  
+}
+.imgTwo img{
+    height: 250px;
+}
+
+
+.textThree button{
+    width: 35%;
+}
+#sectionFive{
+    height: 700px;
+   
+}
+.containerFive{
+    width: 100%;
+    flex-wrap: wrap;
+  
+}
+.div{
+    width: 31%;
+    height: 650px;
+    flex-direction: column;
+    margin:  5px;
+  
+
+}
+.div img{
+    width: 100%;
+}
+.div h2{
+    font-size: 17px;
+  
+}
+.cont{
+    width: 40%;
+    flex-direction: column;
+    
+}
+.number{
+    width: 40%;
+    flex-direction: column;
+}
+.dont{
+    flex-direction: column;
+    width: 100%;
+}
+.btt{
+    width: 100%;  
+    font-size: 15px; 
+    background-color: #65C9BB;
+}
+
+#sectionSix{
+    flex-direction: column;
+    height: 750px;
+}
+.containerSix{
+    width: 100%;
+    padding: 40px 0;
+    flex-direction: column;
+  
+}
+.imgSix {
+    width: 90%;
+    height: 300px;
+    padding: 40px 0;
+    display: flex;
+    align-items: space-between;
+    justify-content: center;
+}
+
+.imgSix img{
+    width: 90%;
+    height: 310px;
+}
+.textSix{
+  text-align: justify;
+    width: 80%;
+    height: 350px;  
+    margin-top: 10px;
+} 
+.textSix span{
+    font-size: 19px;
+}
+.textSix h2{
+    font-size: 24px;
+}
+.textSix p{
+    font-size: 19px;
+}
+.btnSix{
+    width: 100%;
+}
+
+.btnSix .btOne{
+    width: 50%; 
+}
+
+#sectionSeven{
+    height: 850px;
+    flex-direction: column;
+}
+.containerSeven{
+    flex-direction: column;
+}
+.textSeven{
+    flex-direction: column;
+}
+.card{
+    flex-direction: column;
+}
+.cardBox{
+    width: 100%;
+    flex-direction: column;
+}
+
+}
+
+
+
+
+
+
